[gd_scene load_steps=4 format=3 uid="uid://ujeugj626aot"]

[ext_resource type="Script" uid="uid://car3il8lbqky5" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://vgl0sm2xl6rm" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://bj1qh2bal1t32" path="res://assets/sprites/tilesetSpaceship.png" id="3_bqqt6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.768627)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bqqt6")
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = -187.0
offset_right = 1163.0
offset_bottom = 833.0
color = Color(0, 0, 0, 0.121569)

[node name="MultiplayerHUB" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MultiplayerHUB"]
layout_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerHUB/Panel"]
layout_mode = 1
offset_left = -182.0
offset_top = -74.0
offset_right = 217.0
offset_bottom = 112.0
theme_override_constants/separation = 60

[node name="HostGame" type="Button" parent="MultiplayerHUB/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 28
text = "Host Game"
vertical_icon_alignment = 0

[node name="JoinGame" type="Button" parent="MultiplayerHUB/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 28
text = "Join Game"
vertical_icon_alignment = 2
